...
            <RNTesterDocumentationURL documentationURL={documentationURL} />
          )}
        </View>
        {onBack && (
          <View>
            <Button
              title="Back"
              onPress={onBack}
              color={Platform.select({
                ios: theme.LinkColor,
                default: undefined,
              })}
            />
...
