...
    iconStyle={styles.componentIcon}
  />
);

const APITab = ({isAPIActive, handleNavBarPress, theme}) => (
  <NavbarButton
    testID="apis-tab"
    label="APIs"
    handlePress={() => handleNavBarPress({screen: 'apis'})}
    activeImage={require('./../assets/bottom-nav-apis-icon-active.png')}
    inactiveImage={require('./../assets/bottom-nav-apis-icon-inactive.png')}
    isActive={isAPIActive}
    theme={theme}
...
